Update branding in email templates and user management for PicASpot

--- a/src/backend/app/celery/tasks/email_tasks/templates/password_reset.html
+++ b/src/backend/app/celery/tasks/email_tasks/templates/password_reset.html
@@ -32,7 +32,7 @@
 {% block heading %}Password Reset Request{% endblock %}
 
 {% block content %}
-<p>We received a request to reset your password for your Hell App account. If this was you, please use the button
+<p>We received a request to reset your password for your PicASpot account. If this was you, please use the button
    below to create a new password.</p>
 
 <div class="reset-container">
@@ -48,11 +48,11 @@
 </div>
 
 <div class="security-tip">
-  <strong>Security Tip:</strong> Never share your Hell App password with anyone. Our team will never ask for your
+  <strong>Security Tip:</strong> Never share your PicASpot password with anyone. Our team will never ask for your
   password via email or phone.
 </div>
 {% endblock %}
 
-{% block signature %}The Hell App Security Team{% endblock %}
+{% block signature %}The PicASpot Security Team{% endblock %}
 
-{% block footer_extra %}This email was sent to you because a password reset was requested for your Hell App account.{% endblock %}
+{% block footer_extra %}This email was sent to you because a password reset was requested for your PicASpot account.{% endblock %}
