--- a/src/backend/app/celery/tasks/email_tasks/templates/verify.html
+++ b/src/backend/app/celery/tasks/email_tasks/templates/verify.html
@@ -1,6 +1,6 @@
 {% extends "base_email.html" %}
 
-{% block title %}Hell App Email Verification{% endblock %}
+{% block title %}PicASpot Email Verification{% endblock %}
 
 {% block additional_styles %}
 .next-steps {
@@ -73,7 +73,7 @@
 {% block heading %}Verify Your Email Address{% endblock %}
 
 {% block content %}
-<p>Thank you for registering with Hell App, the secure examination platform designed to maintain academic integrity.
+<p>Thank you for registering with PicASpot, your platform for discovering and sharing amazing locations.
    To complete your registration and activate your account, please verify your email address.</p>
 
 <div class="verification-container">
@@ -92,18 +92,18 @@
   </div>
   <div class="step">
     <div class="step-number">2</div>
-    <div class="step-text">You can access the platform when your institution schedules an assessment</div>
+    <div class="step-text">You can start exploring and sharing your favorite spots</div>
   </div>
   <div class="step">
     <div class="step-number">3</div>
-    <div class="step-text">Log in using your credentials to start your secure examination</div>
+    <div class="step-text">Connect with others and discover new locations</div>
   </div>
 </div>
 
 <div class="divider"></div>
 
-<p>If you did not create an account with Hell App, please ignore this email or contact our support team if you have
+<p>If you did not create an account with PicASpot, please ignore this email or contact our support team if you have
    concerns.</p>
 {% endblock %}
 
-{% block footer_extra %}This email was sent to you because an account was created with this email address on the Hell App examination platform.{% endblock %}
+{% block footer_extra %}This email was sent to you because an account was created with this email address on PicASpot.{% endblock %}
