Update email signature and footer branding to reflect PicASpot

--- a/src/backend/app/celery/tasks/email_tasks/templates/base_email.html
+++ b/src/backend/app/celery/tasks/email_tasks/templates/base_email.html
@@ -492,8 +492,8 @@
     <div class="divider"></div>
 
     <p>Regards,<br>
-      <span class="signature">{% block signature %}The Hell App Team{% endblock %}</span></p>
       <span class="signature">{% block signature %}The PicASpot Team{% endblock %}</span></p>
+  </div>
 
   <div class="footer">
     <p>© {{year}} PicASpot. All rights reserved.</p>
