--- a/src/frontend/global.css
+++ b/src/frontend/global.css
@@ -58,7 +58,8 @@
         --spacing: 0.25rem;
     }
 
-    .dark {
+    @media (prefers-color-scheme: dark) {
+        :root {
         --background: 336 13.5135% 14.5098%;
         --foreground: 21.4286 35.0000% 92.1569%;
         --card: 324 9.6154% 20.3922%;
@@ -109,5 +110,6 @@
         --shadow-lg: 0px 6px 12px -3px hsl(0 0% 0% / 0.09), 0px 4px 6px -4px hsl(0 0% 0% / 0.09);
         --shadow-xl: 0px 6px 12px -3px hsl(0 0% 0% / 0.09), 0px 8px 10px -4px hsl(0 0% 0% / 0.09);
         --shadow-2xl: 0px 6px 12px -3px hsl(0 0% 0% / 0.22);
+        }
     }
 }
